--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 absl-py==0.9.0
 appnope==0.1.0
+astor==0.8.1
 astunparse==1.6.3
 attrs==19.3.0
 backcall==0.1.0
+beautifulsoup4==4.9.1
 bleach==3.1.4
 cachetools==4.1.0
 certifi==2020.4.5.1
@@ -35,7 +37,7 @@ jupyter==1.0.0
 jupyter-client==6.1.3
 jupyter-console==6.1.0
 jupyter-core==4.6.3
-Keras==2.3.1
+Keras==2.2.5
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
@@ -79,10 +81,11 @@ selenium==3.141.0
 Send2Trash==1.5.0
 six==1.14.0
 sklearn==0.0
-tensorboard==2.2.1
+soupsieve==2.0.1
+tensorboard==1.14.0
 tensorboard-plugin-wit==1.6.0.post3
-tensorflow==2.2.0
-tensorflow-estimator==2.2.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
 termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
