--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,7 @@ terminado==0.8.3
 testpath==0.4.4
 threadpoolctl==2.0.0
 tornado==6.0.4
+tqdm==4.46.0
 traitlets==4.3.3
 urllib3==1.25.9
 wcwidth==0.1.9
